input-sys/src/platforms/freebsd/x86/gen_1_9.rs

extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the current absolute y coordinate of the tablet tool event,"]
    #[doc = " transformed to screen coordinates."]
    #[doc = ""]
    #[doc = " @note This function may be called for a specific axis even if"]
    #[doc = " libinput_event_tablet_tool_*_has_changed() returns 0 for that axis."]
    #[doc = " libinput always includes all device axes in the event."]
    #[doc = ""]
    #[doc = " @note On some devices, returned value may be negative or larger than the"]
    #[doc = " width of the device. See @ref tablet-bounds for more details."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @param height The current output screen height"]
    #[doc = " @return the current absolute y coordinate transformed to a screen coordinate"]
    pub fn libinput_event_tablet_tool_get_y_transformed(
        event: *mut libinput_event_tablet_tool,
        height: u32,
    ) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the tool that was in use during this event."]
    #[doc = ""]
    #[doc = " The returned tablet tool is not refcounted and may become invalid after"]
    #[doc = " the next call to libinput. Use libinput_tablet_tool_ref() and"]
    #[doc = " libinput_tablet_tool_unref() to continue using the handle outside of the"]
    #[doc = " immediate scope."]
    #[doc = ""]
    #[doc = " If the caller holds at least one reference, this struct is used"]
    #[doc = " whenever the tools enters proximity again."]
    #[doc = ""]
    #[doc = " @note Physical tool tracking requires hardware support. If unavailable,"]
    #[doc = " libinput creates one tool per type per tablet. See @ref"]
    #[doc = " tablet-serial-numbers for more details."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The new tool triggering this event"]
    pub fn libinput_event_tablet_tool_get_tool(
        event: *mut libinput_event_tablet_tool,
    ) -> *mut libinput_tablet_tool;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the new proximity state of a tool from a proximity event."]
    #[doc = " Used to check whether or not a tool came in or out of proximity during an"]
    #[doc = " event of type @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY."]
    #[doc = ""]
    #[doc = " See @ref tablet-fake-proximity for recommendations on proximity handling."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The new proximity state of the tool from the event."]
    pub fn libinput_event_tablet_tool_get_proximity_state(
        event: *mut libinput_event_tablet_tool,
    ) -> libinput_tablet_tool_proximity_state;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the new tip state of a tool from a tip event."]
    #[doc = " Used to check whether or not a tool came in contact with the tablet"]
    #[doc = " surface or left contact with the tablet surface during an"]
    #[doc = " event of type @ref LIBINPUT_EVENT_TABLET_TOOL_TIP."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The new tip state of the tool from the event."]
    pub fn libinput_event_tablet_tool_get_tip_state(
        event: *mut libinput_event_tablet_tool,
    ) -> libinput_tablet_tool_tip_state;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the button that triggered this event.  For events that are not of"]
    #[doc = " type @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return the button triggering this event"]
    pub fn libinput_event_tablet_tool_get_button(event: *mut libinput_event_tablet_tool) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the button state of the event."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return the button state triggering this event"]
    pub fn libinput_event_tablet_tool_get_button_state(
        event: *mut libinput_event_tablet_tool,
    ) -> libinput_button_state;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " For the button of a @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON event, return the total"]
    #[doc = " number of buttons pressed on all devices on the associated seat after the"]
    #[doc = " the event was triggered."]
    #[doc = ""]
    #[doc = "\" @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_BUTTON. For other events, this function returns 0."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return the seat wide pressed button count for the key of this event"]
    pub fn libinput_event_tablet_tool_get_seat_button_count(
        event: *mut libinput_event_tablet_tool,
    ) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The event time for this event"]
    pub fn libinput_event_tablet_tool_get_time(event: *mut libinput_event_tablet_tool) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The event time for this event in microseconds"]
    pub fn libinput_event_tablet_tool_get_time_usec(event: *mut libinput_event_tablet_tool) -> u64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the tool type for a tool object, see @ref"]
    #[doc = " tablet-tool-types for details."]
    #[doc = ""]
    #[doc = " @param tool The libinput tool"]
    #[doc = " @return The tool type for this tool object"]
    #[doc = ""]
    #[doc = " @see libinput_tablet_tool_get_tool_id"]
    pub fn libinput_tablet_tool_get_type(
        tool: *mut libinput_tablet_tool,
    ) -> libinput_tablet_tool_type;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the tool ID for a tool object. If nonzero, this number identifies"]
    #[doc = " the specific type of the tool with more precision than the type returned in"]
    #[doc = " libinput_tablet_tool_get_type(), see @ref tablet-tool-types. Not all"]
    #[doc = " tablets support a tool ID."]
    #[doc = ""]
    #[doc = " Tablets known to support tool IDs include the Wacom Intuos 3, 4, 5, Wacom"]
    #[doc = " Cintiq and Wacom Intuos Pro series."]
    #[doc = ""]
    #[doc = " @param tool The libinput tool"]
    #[doc = " @return The tool ID for this tool object or 0 if none is provided"]
    #[doc = ""]
    #[doc = " @see libinput_tablet_tool_get_type"]
    pub fn libinput_tablet_tool_get_tool_id(tool: *mut libinput_tablet_tool) -> u64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Increment the reference count of the tool by one. A tool is destroyed"]
    #[doc = " whenever the reference count reaches 0. See libinput_tablet_tool_unref()."]
    #[doc = ""]
    #[doc = " @param tool The tool to increment the ref count of"]
    #[doc = " @return The passed tool"]
    #[doc = ""]
    #[doc = " @see libinput_tablet_tool_unref"]
    pub fn libinput_tablet_tool_ref(tool: *mut libinput_tablet_tool) -> *mut libinput_tablet_tool;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Decrement the reference count of the tool by one. When the reference"]
    #[doc = " count of the tool reaches 0, the memory allocated for the tool will be"]
    #[doc = " freed."]
    #[doc = ""]
    #[doc = " @param tool The tool to decrement the ref count of"]
    #[doc = " @return NULL if the tool was destroyed otherwise the passed tool"]
    #[doc = ""]
    #[doc = " @see libinput_tablet_tool_ref"]
    pub fn libinput_tablet_tool_unref(tool: *mut libinput_tablet_tool)
        -> *mut libinput_tablet_tool;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return whether the tablet tool supports pressure."]
    #[doc = ""]
    #[doc = " @param tool The tool to check the axis capabilities of"]
    #[doc = " @return Nonzero if the axis is available, zero otherwise."]
    pub fn libinput_tablet_tool_has_pressure(tool: *mut libinput_tablet_tool) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return whether the tablet tool supports distance."]
    #[doc = ""]
    #[doc = " @param tool The tool to check the axis capabilities of"]
    #[doc = " @return Nonzero if the axis is available, zero otherwise."]
    pub fn libinput_tablet_tool_has_distance(tool: *mut libinput_tablet_tool) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return whether the tablet tool supports tilt."]
    #[doc = ""]
    #[doc = " @param tool The tool to check the axis capabilities of"]
    #[doc = " @return Nonzero if the axis is available, zero otherwise."]
    pub fn libinput_tablet_tool_has_tilt(tool: *mut libinput_tablet_tool) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return whether the tablet tool supports z-rotation."]
    #[doc = ""]
    #[doc = " @param tool The tool to check the axis capabilities of"]
    #[doc = " @return Nonzero if the axis is available, zero otherwise."]
    pub fn libinput_tablet_tool_has_rotation(tool: *mut libinput_tablet_tool) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return whether the tablet tool has a slider axis."]
    #[doc = ""]
    #[doc = " @param tool The tool to check the axis capabilities of"]
    #[doc = " @return Nonzero if the axis is available, zero otherwise."]
    pub fn libinput_tablet_tool_has_slider(tool: *mut libinput_tablet_tool) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return whether the tablet tool has a relative wheel."]
    #[doc = ""]
    #[doc = " @param tool The tool to check the axis capabilities of"]
    #[doc = " @return Nonzero if the axis is available, zero otherwise."]
    pub fn libinput_tablet_tool_has_wheel(tool: *mut libinput_tablet_tool) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if a tablet tool has a button with the"]
    #[doc = " passed-in code (see linux/input.h)."]
    #[doc = ""]
    #[doc = " @param tool A tablet tool"]
    #[doc = " @param code button code to check for"]
    #[doc = ""]
    #[doc = " @return 1 if the tool supports this button code, 0 if it does not"]
    pub fn libinput_tablet_tool_has_button(
        tool: *mut libinput_tablet_tool,
        code: u32,
    ) -> ::libc::c_int;
}
